--- a/config/locales/arb/aggregators.yml
+++ b/config/locales/arb/aggregators.yml
@@ -22,8 +22,8 @@ arb:
       # losses: "Charges d'exploitation (2)"
       # net_revenue: "Montant net du chiffre d'affaires"
       # other_products: "Autres produits"
-      # others_expenses: "Autres charges"
-      # others_purchases: "Autres achats et charges externes"
+      # other_expenses: "Autres charges"
+      # other_purchases: "Autres achats et charges externes"
       # productions_sales: "Production vendue (biens et services)"
       # products_purchases: "Achats de marchandises"
       # products_sales: "Ventes de marchandises"
