--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -804,7 +804,7 @@ eng:
     # account_mark: "Lettrer le compte"
     account_name: "Account name"
     account_number: "Account number"
-    # account_others_assets: "Divers"
+    # account_other_assets: "Divers"
     # account_provision: "Provisions pour risques et charges"
     # account_supplier_to_create: "— Créer automatiquement un compte fournisseur —"
     account_tabbox:
@@ -1400,9 +1400,9 @@ eng:
     order_print: "Print order"
     other_results: "Other results..."
     # others: "Autre TVA à déduire"
-    # others_assessable_operations: "Autres opérations imposables"
-    # others_not_assessable_operations: "Autres opérations non imposables"
-    # others_services: "Autres biens et services"
+    # other_assessable_operations: "Autres opérations imposables"
+    # other_not_assessable_operations: "Autres opérations non imposables"
+    # other_services: "Autres biens et services"
     # out_vat_amount: "Base hors taxe"
     outgoing_payments_states:
       all: "All"
