--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -663,6 +663,7 @@ jpn:
     # entity_2: "Personne 2"
     # entity_link_direction: "Entity link direction"
     # entity_link_nature: "Type de lien permettant d’étendre l’abonnement"
+    # entity_role: "Entity role"
     # entries: "Écritures"
     # entry: "Écriture"
     # entry_items: "Lignes d’écritures"
@@ -1026,6 +1027,7 @@ jpn:
     # template: "Modèle"
     # theoric_quantity: "Quantité théorique"
     # third: "Tiers"
+    # third_role: "Third role"
     # thread: "Thread"
     # title: "Titre"
     # to: "Pour"
