--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -51,6 +51,7 @@ eng:
         germinate: "Germinate"
         # grind: "Broyer"
         harvest: "Harvest"
+        # implant: "Planter"
         kill: "Kill"
         # manage: "Gérer"
         # milk: "Traire"
@@ -320,6 +321,7 @@ eng:
         # stocks: "Stocks"
         # straw_cereal_crops: "Céréales à paille"
         # vegetal_crops: "Production végétale"
+        # vine_wine: "Vigne et vin"
       # name: "Familles d’activité"
     charts_of_accounts:
       items:
@@ -1041,6 +1043,7 @@ eng:
         # varieties: "Variétés"
       items:
         # alfalfa: "Luzerne"
+        # autumn_crop: "Cultures d'automne"
         # bean: "Haricot"
         # beet: "Betterave"
         # carrot: "Carotte"
@@ -1054,10 +1057,12 @@ eng:
         # nightshade: "Pomme de terre"
         # peas: "Pois"
         # rape: "Colza"
+        # spring_crop: "Culture de printemps"
         # spring_straw_cereal: "Céréales à paille de printemps"
         # straw_cereal: "Céréales à paille"
         # sunflower: "Tournesol"
         # vetch: "Féverole"
+        # wheat: "Blé"
         # winter_straw_cereal: "Céréales à paille d'hiver"
       # name: "Typologie de culture (France)"
     incidents: #?
@@ -1210,6 +1215,16 @@ eng:
         urea_concentration: #?
         usage_duration: #?
         water_rate: #?
+        woodstock_variety:
+          choices:
+            # 110r: "110r"
+            # 3309c: "3309c"
+            # 99r: "99r"
+            # fercal: "Fercal"
+            # gravesac: "Gravesac"
+            # p1103: "P1103"
+            # rgm: "Rgm"
+            # so4: "So4"
       items:
         animal_disease_state: "Animal disease state"
         animal_life_state: "Animal life state"
@@ -1276,6 +1291,7 @@ eng:
         # usage_duration: "Durée d’utilisation"
         # water_content_rate: "Teneur en eau"
         # width: "Largeur"
+        # woodstock_variety: "Variété du porte-greffe"
       name: "Name"
     issue_natures:
       attributes:
@@ -1285,6 +1301,7 @@ eng:
         # accident: "Accident"
         # animal_pathology: "Pathologie animale"
         # bacteria_disease: "Maladies bactériennes"
+        # climate_issue: "Incident climatique"
         # diarrhea: "Diarrhée"
         # fecondity_problem: "Problème de fécondité"
         # fungus_disease: "Maladies cryptogamiques"
@@ -1460,6 +1477,8 @@ eng:
         # growth_control: "Contrôle de croissance"
         # harvest: "Récolte"
         # haymaking: "Fenaison"
+        # implant: "Plantation"
+        # implantation: "Implantation d'une culture"
         # milk_production: "Production laitière"
         # oviparous_birth: "Reproduction (ovipare)"
         # plant_fertilisation: "Fertilisation"
@@ -1551,6 +1570,7 @@ eng:
         # milk: "Lait"
         # natural_water: "Eau de pluie / puit"
         # other_consumable: "Autres consommables"
+        # plant: "Plant"
         # plant_medicine: "Produit phytosanitaire"
         # running_water: "Eau du réseau"
         # seed: "Semence"
@@ -1681,11 +1701,13 @@ eng:
         # hard_wheat_straw_bales: "Bottes de paille de blé dur"
         # hay_rake: "Andaineur"
         # helianthus_herbicide: "Herbicide tournesol"
+        # hen_compost: "Compost de poule"
         # hen_guano: "Guano de poule"
         # hen_manure: "Fumier de poule"
         # hen_slurry: "Lisier de poule"
         # horse_manure: "Fumier de cheval"
         # hydromorph_sandy_clay_loam_land_parcel: "Parcelle sablo-argileuse hydromorphe"
+        # implanter: "Planteuse"
         # insecticide: "Insecticide"
         # irrigation_water: "Eau (irrigation)"
         # land_parcel: "Parcelle"
@@ -1693,7 +1715,9 @@ eng:
         # male_adult_cow: "Taureau"
         # male_young_cow: "Taurillon"
         # manager: "Responsable"
+        # manual_implanter: "Plantoir"
         # manure_division: "Fumière"
+        # merlot_noir_so4_vine_seedling: "Plant de Merlot Noir sur so4"
         # milk_tank: "Tank à lait"
         # mineral_cleaner: "Nettoyant chimique"
         # miradoux_hard_wheat_crop: "Culture de blé dur Miradoux"
@@ -1840,6 +1864,7 @@ eng:
         # grass: "Herbe"
         # hay_rake: "Andaineur"
         # herbicide: "Herbicide"
+        # implanter: "Planteuse"
         # insecticide: "Insecticide"
         # irrigation_water: "Eau (irrigation)"
         land_parcel: "Land parcel"
@@ -1872,8 +1897,10 @@ eng:
         tractor: "Tractor"
         trail: "Trail" #?
         # trailer: "Remorque"
+        # usual_vine_seedling: "Plant de vigne traditionnel"
         wheat_crop: "Wheat crop" #?
         # wine: "Vin"
+        # wine_crop: "Vigne"
         young_cow: "Young cow" #?
       name: "Name"
     production_natures:  #?
@@ -2092,6 +2119,7 @@ eng:
         # hordeum_vernum_hypoproteinae: "Orge de printemps (faible teneur en protéïnes)"
         # hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         immatter: "Immatter"
+        # implanter: "Planteuse"
         # insecta: "Insecte"
         # insecticide: "Produit insecticide"
         # isengrain: "Isengrain"
@@ -2105,6 +2133,7 @@ eng:
         # linum: "Lin"
         # liquid_slurry: "Purin"
         # lona: "Lona"
+        # malbec: "Malbec"
         # malus: "Pommier"
         # mammalia: "Mammifère"
         # manital: "Manital"
@@ -2163,6 +2192,8 @@ eng:
         # sculptur: "Sculptur"
         # secale: "Secale"
         # seed: "Semence"
+        # seedling: "Plant"
+        # semillon_blanc: "Semillon blanc"
         service: "Service"
         # settlement: "Agencement"
         # silt_schist_soil: "Limons sur schiste ou gneiss"
@@ -2183,7 +2214,7 @@ eng:
         # swamp_peaty_soil: "Terre de marais tourbeux"
         # sy_banco: "Sy banco"
         # sy_cysco: "Sy cysco"
-        # syrah: "Syrah"
+        # syrah_noir: "Syrah noir"
         # tablur: "Tablur"
         # tamaro: "Tamaro"
         # tank: "Réservoir"
