--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -2054,6 +2054,7 @@ fra:
     backend/observations: "{content}"
     backend/operations: "{reference_name} ({started_at})"
     backend/plants: "{name} - {work_number}"
+    backend/prescriptions: "{reference_number}"
     backend/product_indicators: "{id}"
     backend/product_memberships: "{started_at}"
     backend/product_nature_variants: "{name} ({unit_name})"
