--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -15,6 +15,7 @@ jpn:
         # germinate: "Germer"
         # grind: "Broyer"
         # harvest: "Récolter"
+        # implant: "Planter"
         # kill: "Tuer"
         # manage: "Gérer"
         # milk: "Traire"
@@ -264,6 +265,7 @@ jpn:
         # stocks: "Stocks"
         # straw_cereal_crops: "Céréales à paille"
         # vegetal_crops: "Production végétale"
+        # vine_wine: "Vigne et vin"
       # name: "Familles d’activité"
     charts_of_accounts:
       items:
@@ -995,6 +997,7 @@ jpn:
         # varieties: "Variétés"
       items:
         # alfalfa: "Luzerne"
+        # autumn_crop: "Cultures d'automne"
         # bean: "Haricot"
         # beet: "Betterave"
         # carrot: "Carotte"
@@ -1008,10 +1011,12 @@ jpn:
         # nightshade: "Pomme de terre"
         # peas: "Pois"
         # rape: "Colza"
+        # spring_crop: "Culture de printemps"
         # spring_straw_cereal: "Céréales à paille de printemps"
         # straw_cereal: "Céréales à paille"
         # sunflower: "Tournesol"
         # vetch: "Féverole"
+        # wheat: "Blé"
         # winter_straw_cereal: "Céréales à paille d'hiver"
       # name: "Typologie de culture (France)"
     indicators:
@@ -1137,6 +1142,16 @@ jpn:
         urea_concentration: #?
         usage_duration: #?
         water_rate: #?
+        woodstock_variety:
+          choices:
+            # 110r: "110r"
+            # 3309c: "3309c"
+            # 99r: "99r"
+            # fercal: "Fercal"
+            # gravesac: "Gravesac"
+            # p1103: "P1103"
+            # rgm: "Rgm"
+            # so4: "So4"
       items:
         # animal_disease_state: "Phase du bioprocessus de maladie d’un animal"
         # animal_life_state: "Phase du bioprocessus de vie d’un animal"
@@ -1199,6 +1214,7 @@ jpn:
         # usage_duration: "Durée d’utilisation"
         # water_content_rate: "Teneur en eau"
         # width: "Largeur"
+        # woodstock_variety: "Variété du porte-greffe"
       # name: "Indicateurs"
     issue_natures:
       attributes:
@@ -1208,6 +1224,7 @@ jpn:
         # accident: "Accident"
         # animal_pathology: "Pathologie animale"
         # bacteria_disease: "Maladies bactériennes"
+        # climate_issue: "Incident climatique"
         # diarrhea: "Diarrhée"
         # fecondity_problem: "Problème de fécondité"
         # fungus_disease: "Maladies cryptogamiques"
@@ -1380,6 +1397,8 @@ jpn:
         # growth_control: "Contrôle de croissance"
         # harvest: "Récolte"
         # haymaking: "Fenaison"
+        # implant: "Plantation"
+        # implantation: "Implantation d'une culture"
         # milk_production: "Production laitière"
         # oviparous_birth: "Reproduction (ovipare)"
         # plant_fertilisation: "Fertilisation"
@@ -1467,6 +1486,7 @@ jpn:
         # milk: "Lait"
         # natural_water: "Eau de pluie / puit"
         # other_consumable: "Autres consommables"
+        # plant: "Plant"
         # plant_medicine: "Produit phytosanitaire"
         # running_water: "Eau du réseau"
         # seed: "Semence"
@@ -1597,11 +1617,13 @@ jpn:
         # hard_wheat_straw_bales: "Bottes de paille de blé dur"
         # hay_rake: "Andaineur"
         # helianthus_herbicide: "Herbicide tournesol"
+        # hen_compost: "Compost de poule"
         # hen_guano: "Guano de poule"
         # hen_manure: "Fumier de poule"
         # hen_slurry: "Lisier de poule"
         # horse_manure: "Fumier de cheval"
         # hydromorph_sandy_clay_loam_land_parcel: "Parcelle sablo-argileuse hydromorphe"
+        # implanter: "Planteuse"
         # insecticide: "Insecticide"
         # irrigation_water: "Eau (irrigation)"
         # land_parcel: "Parcelle"
@@ -1609,7 +1631,9 @@ jpn:
         # male_adult_cow: "Taureau"
         # male_young_cow: "Taurillon"
         # manager: "Responsable"
+        # manual_implanter: "Plantoir"
         # manure_division: "Fumière"
+        # merlot_noir_so4_vine_seedling: "Plant de Merlot Noir sur so4"
         # milk_tank: "Tank à lait"
         # mineral_cleaner: "Nettoyant chimique"
         # miradoux_hard_wheat_crop: "Culture de blé dur Miradoux"
@@ -1740,6 +1764,7 @@ jpn:
         # grass: "Herbe"
         # hay_rake: "Andaineur"
         # herbicide: "Herbicide"
+        # implanter: "Planteuse"
         # insecticide: "Insecticide"
         # irrigation_water: "Eau (irrigation)"
         # land_parcel: "Parcelle"
@@ -1771,7 +1796,9 @@ jpn:
         # technician: "Technicien"
         # tractor: "Tracteur"
         # trailer: "Remorque"
+        # usual_vine_seedling: "Plant de vigne traditionnel"
         # wine: "Vin"
+        # wine_crop: "Vigne"
       # name: "Type de produits"
     production_natures: #?
     roles:
@@ -1973,6 +2000,7 @@ jpn:
         # hordeum_vernum_hypoproteinae: "Orge de printemps (faible teneur en protéïnes)"
         # hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         # immatter: "Immatérialisable"
+        # implanter: "Planteuse"
         # insecta: "Insecte"
         # insecticide: "Produit insecticide"
         # isengrain: "Isengrain"
@@ -1986,6 +2014,7 @@ jpn:
         # linum: "Lin"
         # liquid_slurry: "Purin"
         # lona: "Lona"
+        # malbec: "Malbec"
         # malus: "Pommier"
         # mammalia: "Mammifère"
         # manital: "Manital"
@@ -2043,6 +2072,8 @@ jpn:
         # sculptur: "Sculptur"
         # secale: "Secale"
         # seed: "Semence"
+        # seedling: "Plant"
+        # semillon_blanc: "Semillon blanc"
         # service: "Service"
         # settlement: "Agencement"
         # silt_schist_soil: "Limons sur schiste ou gneiss"
@@ -2063,7 +2094,7 @@ jpn:
         # swamp_peaty_soil: "Terre de marais tourbeux"
         # sy_banco: "Sy banco"
         # sy_cysco: "Sy cysco"
-        # syrah: "Syrah"
+        # syrah_noir: "Syrah noir"
         # tablur: "Tablur"
         # tamaro: "Tamaro"
         # tank: "Réservoir"
