--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -2096,6 +2096,7 @@ spa:
     # backend/observations: "{content}"
     # backend/operations: "{reference_name} ({started_at})"
     # backend/plants: "{name} - {work_number}"
+    # backend/prescriptions: "{reference_number}"
     # backend/product_indicators: "{id}"
     # backend/product_memberships: "{started_at}"
     # backend/product_nature_variants: "{name} ({unit_name})"
