--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -299,8 +299,8 @@ fra:
       financial_asset_depreciation: "Amortissement d’immobilisation"
       financial_year: "Exercice"
       fungus: "Champignon"
-      gap: ""
-      # gap_item: "Gap item"
+      gap: "Perte ou profit"
+      gap_item: "Élément de perte ou profit"
       immatter: "Immatériel"
       incoming_delivery: "Approvisionnement"
       incoming_delivery_item: "Élément d’approvisionnement"
